# subtitle-group-pipeline

./: .dockerignore  .env.compose.example  .gitattributes  .gitignore  API_MISMATCH_REPORT.md  Dockerfile  README.md  TEST_PLAN.md  backend-routes.json  compose.yml  frontend-api-calls.json  openspec-requirements.json  package-lock.json  s3.sec  user-guide.md
backend/: .env.example  jest-results.json  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: generate-prisma-client.cjs
backend/src/: app.ts  index.ts
backend/src/config/: database.ts  env.ts
backend/src/jobs/: archive.cleanup.ts  download.cleanup.ts  index.ts  notification.escalation.ts  overdue.task.ts  recyclebin.cleanup.ts  revoked-token.cleanup.ts  scheduler.ts
backend/src/middleware/: auth.ts  errorHandler.ts  rateLimit.ts  validate.ts
backend/src/tests/: archive.test.ts  ass-structured.test.ts  auth.test.ts  env.setup.ts  file.test.ts  helpers.ts  notification.test.ts  project.test.ts  security-remediation.test.ts  security-wave2-http.test.ts  security-wave2-setup.test.ts  security-wave2-unit.test.ts  security-wave3-pii.test.ts  security-wave4-revocation.test.ts  security-wave6-logging.test.ts  security.test.ts  setup.ts  subtitle.test.ts  timeline.test.ts  user.test.ts  (+1 more)
docker/: Caddyfile  entrypoint.sh
frontend/app/: index.html  package-lock.json  package.json  tailwind.config.js
nonebot-bridge/: .dockerignore  .env.example  Dockerfile  README.md  bot.py  pyproject.toml
nonebot-bridge/plugins/: qq_bridge.py
(+152 files in other folders)
